<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_layout_card"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
    android:background="@color/colorWhite"
    android:elevation="2dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_query_builder_black_24dp"
    android:id="@+id/imageview_time"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_view"
        android:layout_toRightOf="@+id/imageview_time"
        android:layout_toEndOf="@+id/imageview_time"
        android:text="@string/time_example"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/room_example"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subject_view"
        android:layout_below="@+id/time_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/subject_example"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageview_teacher"
        android:layout_below="@+id/subject_view"
        android:src="@mipmap/ic_account_circle_black_18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_view"
        android:layout_toLeftOf="@+id/imageview_teacher"
        android:layout_toStartOf="@id/imageview_teacher"
        android:layout_below="@id/subject_view"
        android:text="@string/teacher_example"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>